Moved Some of the config settings to below the "Do not edit beyond" line, as they do not need to be edited. Updated Login-Logout code. Move the page header & footer in to functions, so they can be used in the main page and login/logout pages. Fixed the file meta info not showing on the edit page. Added onefilecms.php & onefilecms.css to the excluded files config.

--- a/onefilecms.css
+++ b/onefilecms.css
@@ -204,7 +204,7 @@ ul.list .meta span {
 .front_links a.upload { background: url("http://self-evident.github.com/OneFileCMS/images/silk_upload.png") 0 3px no-repeat; }
 .front_links a.other { background: url("http://self-evident.github.com/OneFileCMS/images/silk_other.png") 0 3px no-repeat; }
 .front_links a:hover { border: 1px solid #807568; background-color: #fffbce; }
-form .meta { z-index: -1; }
+form .meta {color: #666666;float: left;width: 250px;}
 
 .textinput {
 	border: 1px solid #807568;
